# pyevolviot

./: .gitignore  README.md  pyproject.toml
src/pyevolviot/: __init__.py  client.py
tests/: test_client.py
