[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyevolviot"
version = "0.2.0"
description = "Async client for the EvolvIOT Home Assistant API"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "EvolvIOT" }]
dependencies = [
  "aiohttp>=3.9.0",
  "cryptography>=42.0.0",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/system-buru/pyevolviot"
Repository = "https://github.com/system-buru/pyevolviot"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pyevolviot = ["py.typed"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
